rpi5/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
spec:
  selector:
    app: technitium
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
