rpi5/technitium/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: technitium
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`technitium.local`) || Host(`technitium.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: technitium
          port: 80
  tls:
    secretName: technitium-cert-tls
    domains:
      - main: technitium.local
        sans:
          - technitium.internal
